Succesfully hide google map api using dot env

--- a/app.json
+++ b/app.json
@@ -36,7 +36,7 @@
       ],
       "config": {
         "googleMaps": {
-          "apiKey": "AIzaSyDf1vfB2AGpVCGh1fdwB5mMZ-ClAnYh0ic"
+          "apiKey": "GOOGLE_MAPS_API_KEY_PLACEHOLDER"
         }
       }
     },
@@ -52,8 +52,7 @@
       ]
     ],
     "extra": {
-      "apiUrl": "http://192.168.1.9:5000/api",
-      "googleMapsApiKey": "AIzaSyDf1vfB2AGpVCGh1fdwB5mMZ-ClAnYh0ic"
+      "apiUrl": "http://192.168.1.9:5000/api"
     }
   }
 }
