--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native": "^7.1.18",
     "@react-navigation/native-stack": "^7.3.28",
     "axios": "^1.12.2",
+    "dotenv": "^17.2.3",
     "expo": "^54.0.13",
     "expo-constants": "~18.0.9",
     "expo-location": "~19.0.7",
